--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.6.1",
     "bootstrap": "^5.3.6",
     "dayjs": "^1.11.13",
-    "firebase": "^11.7.3",
+    "firebase": "^11.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -17,7 +17,7 @@
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.21.2",
     "sweetalert2-react-content": "^5.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4"
   }
 }
